@@ -1,5 +1,6 @@
 - urpmi, gurpmi
-  o allow "retry" on aria2 download failure
+  o prompt for "retry" on aria2 download failure
+  o retry once on aria2 versioned-file download failure
 - urpmi
   o fix --auto-update ignoring --media and default-media (#45097)
 - gurpmi
